--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "19.0.0",
     "@angular/router": "19.0.0",
     "@ngbracket/ngx-layout": "18.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@swimlane/ngx-charts": "^21.0.0",
     "@swimlane/ngx-datatable": "20.1.0",
     "@types/moment": "^2.11.29",
